tests/invalid_nodepend/invalid_decimal_literal.err_exp
invalid_decimal_literal.m:012: Error: function [38;5;87m`foo1'/0[39;49m [38;5;203mhas no clauses.[39;49m
invalid_decimal_literal.m:013: Error: function [38;5;87m`foo2'/0[39;49m [38;5;203mhas no clauses.[39;49m
invalid_decimal_literal.m:017: Syntax error: an underscore should separate two
invalid_decimal_literal.m:017:   digits; it should not appear just before a
invalid_decimal_literal.m:017:   decimal point.
invalid_decimal_literal.m:019: Syntax error: an underscore should separate two
invalid_decimal_literal.m:019:   digits; it should not appear just before a
invalid_decimal_literal.m:019:   decimal point.
